--- a/index.html
+++ b/index.html
@@ -14,32 +14,40 @@ body, html {
     background: radial-gradient(circle at 50% 50%, #0f0c29, #302b63, #24243e);
     color: #fff;
     height: 100%;
+    position: relative;
 }
 
-/* --- Плавающий градиент + туман --- */
+/* --- Психоделический фон и туман --- */
 #background {
     position: fixed;
     top:0; left:0;
     width:100%; height:100%;
     pointer-events: none;
-    z-index: -2;
+    z-index: -3;
     background: radial-gradient(circle, rgba(255,0,150,0.2), rgba(0,255,200,0.1));
-    animation: floatBackground 30s linear infinite;
+    animation: floatBackground 40s linear infinite;
 }
 @keyframes floatBackground {
     0%{background-position:0 0;}
     50%{background-position:100% 50%;}
     100%{background-position:0 0;}
 }
+
 #mist {
     position: fixed;
     top:0; left:0;
     width:100%; height:100%;
     pointer-events: none;
-    z-index: -1;
+    z-index: -2;
     background: url('images/photo1.jpg') center/cover no-repeat;
-    opacity:0.03;
-    filter: blur(20px);
+    opacity:0.05;
+    filter: blur(25px);
+    animation: mistMove 60s linear infinite;
+}
+@keyframes mistMove {
+    0%{transform: translate(0,0) rotate(0deg);}
+    50%{transform: translate(100px,50px) rotate(5deg);}
+    100%{transform: translate(0,0) rotate(0deg);}
 }
 
 /* --- Курсор --- */
@@ -52,14 +60,21 @@ body, html {
     mix-blend-mode: difference;
     transform: translate(-50%, -50%);
     z-index:9999;
+    filter: blur(1px);
+    animation: cursorPulse 2s infinite;
+}
+@keyframes cursorPulse {
+    0%{transform: translate(-50%,-50%) scale(1);}
+    50%{transform: translate(-50%,-50%) scale(1.4);}
+    100%{transform: translate(-50%,-50%) scale(1);}
 }
 
-/* --- Заголовок с глитч-эффектом --- */
+/* --- Глитч-текст --- */
 h1 {
     font-size: 4em;
     text-align:center;
-    position: relative;
     margin: 50px 0 30px;
+    position: relative;
 }
 h1 span {
     display:inline-block;
@@ -195,7 +210,6 @@ nav a:hover::after {
     <img src="images/album1.jpg" alt="Альбом 1">
 </section>
 
-<!-- Плавающие слова -->
 <div class="floating-text" style="top:100px; left:50px;">Психоделика</div>
 <div class="floating-text" style="top:200px; left:200px;">Регги</div>
 <div class="floating-text" style="top:300px; left:400px;">Рок</div>
@@ -215,12 +229,12 @@ function toggleTracks(){
     else list.style.display='block';
 }
 
-/* --- Случайные вспышки текста --- */
+/* --- Случайные глитчи заголовка --- */
 function randomGlitch(){
     const spans = document.querySelectorAll('h1 span');
     spans.forEach(s=>{
-        if(Math.random()<0.05){
-            s.style.transform=`translate(${(Math.random()-0.5)*10}px, ${(Math.random()-0.5)*10}px)`;
+        if(Math.random()<0.07){
+            s.style.transform=`translate(${(Math.random()-0.5)*15}px, ${(Math.random()-0.5)*15}px)`;
             s.style.color=`hsl(${Math.random()*360},100%,70%)`;
         }
     });
@@ -228,18 +242,31 @@ function randomGlitch(){
 }
 randomGlitch();
 
-/* --- Плавающий текст случайно перемещается --- */
+/* --- Плавающий текст --- */
 function floatRandomText(){
     const floats = document.querySelectorAll('.floating-text');
     floats.forEach(f=>{
         let top = parseInt(f.style.top);
         let left = parseInt(f.style.left);
-        f.style.top = (top + (Math.random()-0.5)*2) + 'px';
-        f.style.left = (left + (Math.random()-0.5)*2) + 'px';
+        f.style.top = (top + (Math.random()-0.5)*3) + 'px';
+        f.style.left = (left + (Math.random()-0.5)*3) + 'px';
     });
     requestAnimationFrame(floatRandomText);
 }
 floatRandomText();
+
+/* --- Галерея глитч эффект --- */
+const galleryImages = document.querySelectorAll('.gallery img');
+galleryImages.forEach(img=>{
+    img.addEventListener('mousemove', e=>{
+        img.style.filter=`hue-rotate(${Math.random()*360}deg) blur(${Math.random()}px)`;
+        img.style.transform=`scale(${1+Math.random()*0.2}) rotate(${Math.random()*10-5}deg)`;
+    });
+    img.addEventListener('mouseleave', e=>{
+        img.style.filter='';
+        img.style.transform='';
+    });
+});
 </script>
 </body>
 </html>
