--- a/index.html
+++ b/index.html
@@ -3,270 +3,318 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Увертюра Иордан</title>
+<title>Увертюра Иордан — Психоделический хаос</title>
 <style>
-/* --- Базовые стили --- */
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    font-family: 'Arial', sans-serif;
-    background: radial-gradient(circle at 50% 50%, #0f0c29, #302b63, #24243e);
-    color: #fff;
-    height: 100%;
-    position: relative;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  overflow-x: hidden;
+  background: #0a001f;
+  color: #fff;
+  transition: background 3s;
+  filter: contrast(1.2) saturate(1.5);
 }
 
-/* --- Психоделический фон и туман --- */
-#background {
-    position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    pointer-events: none;
-    z-index: -3;
-    background: radial-gradient(circle, rgba(255,0,150,0.2), rgba(0,255,200,0.1));
-    animation: floatBackground 40s linear infinite;
-}
-@keyframes floatBackground {
-    0%{background-position:0 0;}
-    50%{background-position:100% 50%;}
-    100%{background-position:0 0;}
-}
-
-#mist {
-    position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    pointer-events: none;
-    z-index: -2;
-    background: url('images/photo1.jpg') center/cover no-repeat;
-    opacity:0.05;
-    filter: blur(25px);
-    animation: mistMove 60s linear infinite;
-}
-@keyframes mistMove {
-    0%{transform: translate(0,0) rotate(0deg);}
-    50%{transform: translate(100px,50px) rotate(5deg);}
-    100%{transform: translate(0,0) rotate(0deg);}
-}
-
-/* --- Курсор --- */
-#custom-cursor {
-    position: fixed;
-    width: 40px; height: 40px;
-    border-radius: 50%;
-    pointer-events: none;
-    background: radial-gradient(circle, #ff00ff, #00ffff);
-    mix-blend-mode: difference;
-    transform: translate(-50%, -50%);
-    z-index:9999;
-    filter: blur(1px);
-    animation: cursorPulse 2s infinite;
-}
-@keyframes cursorPulse {
-    0%{transform: translate(-50%,-50%) scale(1);}
-    50%{transform: translate(-50%,-50%) scale(1.4);}
-    100%{transform: translate(-50%,-50%) scale(1);}
-}
-
-/* --- Глитч-текст --- */
+/* Заголовок с глитчем */
 h1 {
-    font-size: 4em;
-    text-align:center;
-    margin: 50px 0 30px;
-    position: relative;
+  font-size: 4em;
+  text-align: center;
+  margin: 40px 0;
+  position: relative;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
 }
 h1 span {
-    display:inline-block;
-    position:relative;
-    animation: glitch 2s infinite;
+  display: inline-block;
+  transition: transform 0.3s, color 0.3s;
+  animation: glitchShake 5s infinite;
 }
-@keyframes glitch {
-    0%{transform: translate(0,0);}
-    20%{transform: translate(-2px,2px);}
-    40%{transform: translate(2px,-2px);}
-    60%{transform: translate(-2px,-2px);}
-    80%{transform: translate(2px,2px);}
-    100%{transform: translate(0,0);}
-}
-
-/* --- Навигация --- */
-nav {
-    text-align:center;
-    margin-bottom:50px;
-}
-nav a {
-    margin:0 15px;
-    text-decoration:none;
-    color:#fff;
-    font-size:1.2em;
-    position: relative;
-}
-nav a::after {
-    content:'';
-    display:block;
-    height:2px;
-    background:#ff00ff;
-    transition:0.3s;
-    transform: scaleX(0);
-}
-nav a:hover::after {
-    transform: scaleX(1);
+@keyframes glitchShake {
+  0%,100%{transform:translate(0,0) rotate(0deg);}
+  10%{transform:translate(-2px,1px) rotate(-1deg);}
+  20%{transform:translate(2px,-1px) rotate(1deg);}
+  30%{transform:translate(-1px,2px) rotate(0deg);}
+  40%{transform:translate(1px,-2px) rotate(-1deg);}
+  50%{transform:translate(-1px,1px) rotate(1deg);}
+  60%{transform:translate(2px,-1px) rotate(0deg);}
+  70%{transform:translate(-2px,1px) rotate(1deg);}
+  80%{transform:translate(1px,-1px) rotate(-1deg);}
+  90%{transform:translate(0,2px) rotate(0deg);}
 }
 
-/* --- Альбом --- */
+/* Альбом */
 .album {
-    text-align:center;
-    margin-bottom:50px;
-    position:relative;
+  text-align: center;
+  margin-bottom: 80px;
+  position: relative;
+  z-index: 5;
+  animation: subtleShake 10s infinite;
 }
 .album img {
-    width:300px;
-    border:3px solid #fff;
-    transition: transform 0.3s, filter 0.3s;
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  border: 4px solid #fff;
+  transition: transform 0.5s, filter 0.5s;
 }
 .album img:hover {
-    transform: scale(1.1) rotate(2deg);
-    filter: hue-rotate(60deg) brightness(1.2);
+  transform: scale(1.1) rotate(3deg) hue-rotate(150deg) saturate(1.8) blur(1px);
 }
 .tracklist {
-    max-width:400px;
-    margin: 20px auto;
-    text-align:left;
-    display:none;
+  margin-top: 20px;
+  display: none;
+  text-align: left;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .tracklist audio {
-    width:100%;
-    margin:5px 0;
+  width: 100%;
+  margin-bottom: 10px;
 }
 .show-tracks {
-    display:block;
-    text-align:center;
-    margin-top:10px;
-    cursor:pointer;
-    font-weight:bold;
-    color:#0ff;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background: #fff;
+  color: #000;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1em;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.show-tracks:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px #fff;
 }
 
-/* --- Галерея --- */
+/* Галерея */
 .gallery {
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:center;
-    gap:20px;
-    margin-bottom:100px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin: 60px 0;
+  position: relative;
+  z-index: 5;
 }
 .gallery img {
-    width:200px;
-    transition: transform 0.5s, filter 0.5s;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border: 3px solid #fff;
+  transition: transform 0.5s, filter 0.5s, box-shadow 0.5s;
 }
 .gallery img:hover {
-    transform: scale(1.3) rotate(5deg);
-    filter: hue-rotate(90deg) blur(1px);
+  transform: scale(1.3) rotate(10deg);
+  filter: hue-rotate(90deg) blur(2px) saturate(2);
+  box-shadow: 0 0 20px #ff0, 0 0 40px #0ff;
 }
 
-/* --- Плавающий текст --- */
-.floating-text {
-    position:absolute;
-    font-size:1.2em;
-    opacity:0.4;
-    animation: floatText 10s infinite linear;
+/* Туман и линии */
+.fog {
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: url('images/photo1.jpg') repeat;
+  opacity: 0.08;
+  pointer-events: none;
+  animation: fogmove 80s linear infinite;
+  z-index: 1;
+  filter: blur(12px) brightness(0.8);
 }
-@keyframes floatText {
-    0%{transform: translateY(0);}
-    50%{transform: translateY(-50px);}
-    100%{transform: translateY(0);}
+@keyframes fogmove {
+  0%{background-position:0 0;}
+  100%{background-position:1500px 1500px;}
+}
+.lines {
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  pointer-events: none;
+  z-index: 2;
+  overflow: hidden;
+}
+.line {
+  position: absolute;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(to bottom, #f0f, #0ff, #ff0);
+  opacity: 0.12;
+  animation: lineMove 5s linear infinite;
+}
+@keyframes lineMove {
+  0%{transform:translateX(0);}
+  100%{transform:translateX(100vw);}
+}
+
+/* Курсор */
+body{cursor:none;}
+.cursor{
+  width:50px;height:50px;
+  border-radius:50%;
+  position:fixed;
+  pointer-events:none;
+  z-index:9999;
+  transform:translate(-50%,-50%);
+  animation:pulse 2s infinite;
+  background:conic-gradient(#ff0,#f0f,#0ff,#f0f,#ff0);
+  mix-blend-mode:difference;
+  box-shadow:0 0 20px #fff;
+}
+@keyframes pulse{
+  0%,100%{transform:scale(1) translate(-50%,-50%);}
+  50%{transform:scale(1.5) translate(-50%,-50%);}
+}
+.trail{
+  position:absolute;
+  width:14px;height:14px;
+  border-radius:50%;
+  background:conic-gradient(#ff0,#f0f,#0ff,#f0f,#ff0);
+  pointer-events:none;
+  mix-blend-mode:difference;
+  animation:fadeOut 1s forwards;
+}
+@keyframes fadeOut{
+  0%{opacity:1;}
+  100%{opacity:0; transform:scale(0);}
+}
+
+/* Аномалии текста */
+.anom{
+  display:inline-block;
+  position:relative;
+  animation:shake 3s infinite;
+}
+@keyframes shake{
+  0%,100%{transform:translate(0,0) rotate(0deg);}
+  10%{transform:translate(-2px,1px) rotate(-1deg);}
+  20%{transform:translate(1px,-1px) rotate(1deg);}
+  30%{transform:translate(-1px,2px) rotate(0deg);}
+  40%{transform:translate(1px,-2px) rotate(-1deg);}
+  50%{transform:translate(-1px,1px) rotate(1deg);}
+  60%{transform:translate(2px,-1px) rotate(0deg);}
+  70%{transform:translate(-2px,1px) rotate(1deg);}
+  80%{transform:translate(1px,-1px) rotate(-1deg);}
+  90%{transform:translate(0,2px) rotate(0deg);}
+}
+
+/* Слабая дрожь альбома */
+@keyframes subtleShake{
+  0%,100%{transform:translate(0,0);}
+  25%{transform:translate(1px,-1px);}
+  50%{transform:translate(-1px,1px);}
+  75%{transform:translate(1px,1px);}
 }
 </style>
 </head>
 <body>
-<div id="background"></div>
-<div id="mist"></div>
-<div id="custom-cursor"></div>
+<div class="fog"></div>
+<div class="lines"></div>
 
-<h1>
-    <span>У</span><span>в</span><span>е</span><span>р</span><span>т</span><span>ю</span><span>р</span><span>а</span>
-    &nbsp;
-    <span>И</span><span>о</span><span>р</span><span>д</span><span>а</span><span>н</span>
+<h1 id="title">
+  <span class="anom">У</span>
+  <span class="anom">в</span>
+  <span class="anom">е</span>
+  <span class="anom">р</span>
+  <span class="anom">т</span>
+  <span class="anom">ю</span>
+  <span class="anom">р</span>
+  <span class="anom">а</span>
+  <span class="anom"> </span>
+  <span class="anom">И</span>
+  <span class="anom">о</span>
+  <span class="anom">р</span>
+  <span class="anom">д</span>
+  <span class="anom">а</span>
+  <span class="anom">н</span>
 </h1>
 
-<nav>
-    <a href="#album">Альбом</a>
-    <a href="#gallery">Галерея</a>
-</nav>
+<div class="album">
+  <img src="images/album1.jpg" alt="Album 1">
+  <button class="show-tracks">Показать треки</button>
+  <div class="tracklist">
+    <audio controls src="audio/track1.mp3"></audio>
+    <audio controls src="audio/track2.mp3"></audio>
+    <audio controls src="audio/track3.mp3"></audio>
+  </div>
+</div>
 
-<section class="album" id="album">
-    <img src="images/album1.jpg" alt="Альбом 1">
-    <div class="show-tracks" onclick="toggleTracks()">Показать треки</div>
-    <div class="tracklist" id="tracklist">
-        <audio controls src="audio/track1.mp3"></audio>
-        <audio controls src="audio/track2.mp3"></audio>
-        <audio controls src="audio/track3.mp3"></audio>
-    </div>
-</section>
+<div class="gallery">
+  <img src="images/photo1.jpg" alt="Gallery Image" class="anom">
+  <img src="images/photo2.jpg" alt="Gallery Image" class="anom">
+  <img src="images/photo3.jpg" alt="Gallery Image" class="anom">
+</div>
 
-<section class="gallery" id="gallery">
-    <img src="images/photo1.jpg" alt="Фото 1">
-    <img src="images/album1.jpg" alt="Альбом 1">
-</section>
-
-<div class="floating-text" style="top:100px; left:50px;">Психоделика</div>
-<div class="floating-text" style="top:200px; left:200px;">Регги</div>
-<div class="floating-text" style="top:300px; left:400px;">Рок</div>
+<div class="cursor"></div>
 
 <script>
-/* --- Курсор --- */
-const cursor = document.getElementById('custom-cursor');
+// --- Курсор и следы ---
+const cursor=document.querySelector('.cursor');
 document.addEventListener('mousemove', e=>{
-    cursor.style.left = e.clientX + 'px';
-    cursor.style.top = e.clientY + 'px';
+  cursor.style.transform=`translate(${e.clientX}px,${e.clientY}px)`;
+  for(let i=0;i<3;i++){
+    const trail=document.createElement('div');
+    trail.classList.add('trail');
+    trail.style.left=e.clientX+Math.random()*30-15+'px';
+    trail.style.top=e.clientY+Math.random()*30-15+'px';
+    trail.style.width=10+Math.random()*10+'px';
+    trail.style.height=trail.style.width;
+    document.body.appendChild(trail);
+    setTimeout(()=>trail.remove(),1200);
+  }
 });
 
-/* --- Показ треков --- */
-function toggleTracks(){
-    const list = document.getElementById('tracklist');
-    if(list.style.display==='block') list.style.display='none';
-    else list.style.display='block';
+// --- Треклист ---
+const btn=document.querySelector('.show-tracks');
+const tracklist=document.querySelector('.tracklist');
+btn.addEventListener('click',()=>{tracklist.style.display=tracklist.style.display==='block'?'none':'block';});
+
+// --- Аномалии текста ---
+const anomElems=document.querySelectorAll('.anom');
+setInterval(()=>{
+  anomElems.forEach(el=>{
+    el.style.transform=`translate(${Math.random()*20-10}px,${Math.random()*20-10}px) rotate(${Math.random()*20-10}deg)`;
+    el.style.filter=`hue-rotate(${Math.random()*360}deg) blur(${Math.random()*3}px)`;
+  });
+}, 250);
+
+// --- Линии ---
+const linesContainer=document.querySelector('.lines');
+for(let i=0;i<60;i++){
+  const line=document.createElement('div');
+  line.classList.add('line');
+  line.style.left=Math.random()*100+'vw';
+  line.style.animationDuration=(3+Math.random()*10)+'s';
+  linesContainer.appendChild(line);
 }
 
-/* --- Случайные глитчи заголовка --- */
-function randomGlitch(){
-    const spans = document.querySelectorAll('h1 span');
-    spans.forEach(s=>{
-        if(Math.random()<0.07){
-            s.style.transform=`translate(${(Math.random()-0.5)*15}px, ${(Math.random()-0.5)*15}px)`;
-            s.style.color=`hsl(${Math.random()*360},100%,70%)`;
-        }
-    });
-    requestAnimationFrame(randomGlitch);
-}
-randomGlitch();
+// --- Пульсирующий фон ---
+const body=document.body;
+setInterval(()=>{
+  body.style.background=`radial-gradient(circle at ${Math.random()*100}% ${Math.random()*100}%, hsl(${Math.random()*360},100%,15%), #0a001f)`;
+},2000);
 
-/* --- Плавающий текст --- */
-function floatRandomText(){
-    const floats = document.querySelectorAll('.floating-text');
-    floats.forEach(f=>{
-        let top = parseInt(f.style.top);
-        let left = parseInt(f.style.left);
-        f.style.top = (top + (Math.random()-0.5)*3) + 'px';
-        f.style.left = (left + (Math.random()-0.5)*3) + 'px';
-    });
-    requestAnimationFrame(floatRandomText);
-}
-floatRandomText();
+// --- Эксплозивные аномалии ---
+setInterval(()=>{
+  const div=document.createElement('div');
+  const size=20+Math.random()*50;
+  div.style.position='fixed';
+  div.style.width=size+'px';
+  div.style.height=size+'px';
+  div.style.borderRadius='50%';
+  div.style.left=Math.random()*window.innerWidth+'px';
+  div.style.top=Math.random()*window.innerHeight+'px';
+  div.style.background=`conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
+  div.style.mixBlendMode='difference';
+  div.style.opacity='0.5';
+  div.style.transition='all 1s ease-out';
+  document.body.appendChild(div);
+  setTimeout(()=>{div.style.opacity=0; div.style.transform='scale(0)';},100);
+  setTimeout(()=>div.remove(),1500);
+},600);
 
-/* --- Галерея глитч эффект --- */
-const galleryImages = document.querySelectorAll('.gallery img');
-galleryImages.forEach(img=>{
-    img.addEventListener('mousemove', e=>{
-        img.style.filter=`hue-rotate(${Math.random()*360}deg) blur(${Math.random()}px)`;
-        img.style.transform=`scale(${1+Math.random()*0.2}) rotate(${Math.random()*10-5}deg)`;
-    });
-    img.addEventListener('mouseleave', e=>{
-        img.style.filter='';
-        img.style.transform='';
-    });
-});
 </script>
 </body>
 </html>
